@@ -1,6 +1,7 @@
 package TestSet1::page;
 use strict;
 use warnings;
+use Krang::ClassFactory qw(pkg);
 
 =head1 NAME
 
@@ -16,7 +17,7 @@ and leadin elements are available.
 =cut
 
 
-use base 'Krang::ElementClass';
+use Krang::ClassLoader base => 'ElementClass';
 
 sub new {
    my $pkg = shift;
@@ -25,23 +26,23 @@ sub new {
                 pageable => 1,
                 children => 
                 [ 
-                 Krang::ElementClass::Text->new(name         => "header",
+                 pkg('ElementClass::Text')->new(name         => "header",
                                                 required     => 1,
                                                 min          => 1,
                                                 max          => 1,
                                                 allow_delete => 0,
                                                 reorderable  => 0),
-                 Krang::ElementClass::CheckBox->new(name => "wide_page",
+                 pkg('ElementClass::CheckBox')->new(name => "wide_page",
                                                     min  => 1,
                                                     max  => 0,
                                                     allow_delete => 0,
                                                     reorderable => 0),
-                 Krang::ElementClass::PopupMenu->new(name => "bg_color",
+                 pkg('ElementClass::PopupMenu')->new(name => "bg_color",
                                                   display_name => "Background Color",
                                                   values => ['', qw(white blue
                                                                 red grey)],
                                                  ),
-                 Krang::ElementClass::ListBox->new(name => "ad_links",
+                 pkg('ElementClass::ListBox')->new(name => "ad_links",
                                                    display_name => "Ad Links",
                                                    values => [ "Sprinks",
                                                                "Classifieds",
@@ -50,31 +51,31 @@ sub new {
                                                    default => ["Sprinks",
                                                                "Classifieds",
                                                               ]),
-                 Krang::ElementClass::XinhaEditor->new(name => "paragraph",
+                 pkg('ElementClass::XinhaEditor')->new(name => "paragraph",
                                                      required => 1,
                                                      bulk_edit => 0,
                                                     ),
-                 Krang::ElementClass::XinhaEditor->new(name => "std_paragraph",
+                 pkg('ElementClass::XinhaEditor')->new(name => "std_paragraph",
                                                        toolbar_config => 'standard',
                                                      required => 1,
                                                      bulk_edit => 0,
                                                     ),
-                 Krang::ElementClass::XinhaEditor->new(name => "fancy_paragraph",
+                 pkg('ElementClass::XinhaEditor')->new(name => "fancy_paragraph",
                                                        toolbar_config => 'all',
                                                      required => 1,
                                                      bulk_edit => 0,
                                                     ),
-                 Krang::ElementClass::Textarea->new(name => "pull_quote",
+                 pkg('ElementClass::Textarea')->new(name => "pull_quote",
                                                     required => 1,
                                                     rows     => 2,
                                                    ),
-                 Krang::ElementClass::MediaLink->new(name => "photo"),
-                 Krang::ElementClass::StoryLink->new(name => "leadin"),
+                 pkg('ElementClass::MediaLink')->new(name => "photo"),
+                 pkg('ElementClass::StoryLink')->new(name => "leadin"),
 
-                 Krang::ElementClass::StoryLink->new(name => "leadin_covers",
+                 pkg('ElementClass::StoryLink')->new(name => "leadin_covers",
                                                      find => { class => 'cover' } ),
 
-                 Krang::ElementClass::MediaLink->new(name => "photo_image_only",
+                 pkg('ElementClass::MediaLink')->new(name => "photo_image_only",
                                                      find => { media_type_id => 1 } ),
 
                 ],
